Fix collapse for dex trade history

--- a/src/modules/dex/directives/dexBlock/dexBlock.less
+++ b/src/modules/dex/directives/dexBlock/dexBlock.less
@@ -58,7 +58,7 @@ w-dex-block {
       height: 100%;
       display: flex;
       flex-direction: column;
-      overflow: auto;
+      overflow: hidden;
     }
   }
 }
